--- a/5.travel/package.json
+++ b/5.travel/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.13.2",
     "css-loader": "^0.28.11",
     "fastclick": "^1.0.6",
     "stylus": "^0.54.5",
